--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,6 +24,45 @@ layout: default
   </header>
 
   <div class="container">
+    
+    
+                <div class="row"> 
+                    <div class="col-md-4 mb-3 mb-md-5"> 
+                        <div class="card py-4 h-100"> 
+                            <div class="card-body text-center"> 
+                                <i class="fas fa-scroll bigicon mb-2"></i> 
+                                <h4 class="text-uppercase medium m-3">HISTORICAL REALISM</h4> 
+                                <hr class="my-4"> 
+                                <div class="small text-black">Live and learn the past! Historia Realis is as accurate as it gets in the absence of time machines.</div>                                 
+                            </div>                             
+                        </div>                         
+                    </div>                     
+                    <div class="col-md-4 mb-3 mb-md-5"> 
+                        <div class="card py-4 h-100"> 
+                            <div class="card-body text-center"> 
+                                <i class="fas fa-cogs bigicon mb-2"></i> 
+                                <h4 class="text-uppercase medium m-3">Deep Simulation</h4> 
+                                <hr class="my-4"> 
+                                <div class="small text-black">Hundreds of AI characters interacting, creating a simulation as deep as the Mediterranean.
+                                    <br> 
+                                </div>                                 
+                            </div>                             
+                        </div>                         
+                    </div>                     
+                    <div class="col-md-4 mb-3 mb-md-5"> 
+                        <div class="card py-4 h-100"> 
+                            <div class="card-body text-center"> 
+                                <i class="fas fa-pen bigicon mb-2"></i> 
+                                <h4 class="text-uppercase medium m-3">EMERGENT STORIES</h4> 
+                                <hr class="my-4"> 
+                                <div class="small text-black">After playing, you'll always have a unique story to tell on 
+                                    <a href="https://discord.gg/xtPa3hE" target="_blank">Discord</a>, forums or your local tavern.
+                                </div>                                 
+                            </div>                             
+                        </div>                         
+                    </div>                     
+
+    
     <div class="row">
       <div class="col-lg-12 col-md-10 mx-auto">
 
