--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
     {% if page.title %}{{ page.title | escape }} - {{ site.title | escape }}
     {% else %}{{ site.title | escape }}{% endif %}
   </title>
+  
+          <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet"> 
 
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
