--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,9 +31,9 @@ layout: default
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-scroll bigicon mb-2"></i> 
-                                <h4 class="text-uppercase medium m-3">HISTORICAL REALISM</h4> 
+                                <h4 class="text-uppercase medium m-3 text-black">HISTORICAL REALISM</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-dark">Live and learn the past! Historia Realis is as accurate as it gets in the absence of time machines.</div>                                 
+                                <div class="small text-black">Live and learn the past! Historia Realis is as accurate as it gets in the absence of time machines.</div>                                 
                             </div>                             
                         </div>                         
                     </div>                     
