--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,9 +31,9 @@ layout: default
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-scroll bigicon mb-2"></i> 
-                                <h4 class="text-uppercase medium m-3 text-black">HISTORICAL REALISM</h4> 
+                                <h4 class="text-uppercase medium m-3 text-black-50">HISTORICAL REALISM</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-black">Live and learn the past! Historia Realis is as accurate as it gets in the absence of time machines.</div>                                 
+                                <div class="small text-black-50">Live and learn the past! Historia Realis is as accurate as it gets in the absence of time machines.</div>                                 
                             </div>                             
                         </div>                         
                     </div>                     
@@ -41,9 +41,9 @@ layout: default
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-cogs bigicon mb-2"></i> 
-                                <h4 class="text-uppercase medium m-3">Deep Simulation</h4> 
+                                <h4 class="text-uppercase medium m-3 text-black-50">Deep Simulation</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-black">Hundreds of AI characters interacting, creating a simulation as deep as the Mediterranean.
+                                <div class="small text-black-50">Hundreds of AI characters interacting, creating a simulation as deep as the Mediterranean.
                                     <br> 
                                 </div>                                 
                             </div>                             
@@ -53,9 +53,9 @@ layout: default
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-pen bigicon mb-2"></i> 
-                                <h4 class="text-uppercase medium m-3">EMERGENT STORIES</h4> 
+                                <h4 class="text-uppercase medium m-3 text-black-50">EMERGENT STORIES</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-black">After playing, you'll always have a unique story to tell on 
+                                <div class="small text-black-50">After playing, you'll always have a unique story to tell on 
                                     <a href="https://discord.gg/xtPa3hE" target="_blank">Discord</a>, forums or your local tavern.
                                 </div>                                 
                             </div>                             
