--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -73,7 +73,7 @@ layout: default
 
           <article class="post-preview">
             <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
-              <div class="post-container">
+              <div class="post-container"><i class="fas fa-scroll bigicon mb-2"></i> 
                 <div class="post-img-container" title="Image by {{post.artist}}">
                   <img class="post-img" src={{post.background}}>
                 </div>
