--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -79,7 +79,7 @@ layout: default
                 </div>
                 <div class="post-text">
                   <div class="post-text-header">
-                    <h2 class="post-title">{{ post.title }} <i class="fas fa-scroll bigicon mb-2"></i> </h2>
+                    <h2 class="post-title">{{ post.title }} <i class="fas fa-scroll"></i> </h2>
                     <p class="post-meta">
                       {{ post.date | date: '%B %d, %Y' }}
                     </p>
