--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,9 +14,8 @@ layout: default
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>EGYPT:<br/>Shattered Order</h1>
-            {% if site.description %}
-              <span class="subheading">{{ site.description }}</span>
-            {% endif %}
+              <span class="subheading">
+              <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}"></span>
           </div>
         </div>
       </div>
