--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,8 +14,7 @@ layout: default
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>EGYPT:<br/>Shattered Order</h1>
-              <span class="subheading">
-              <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}"></span>
+              <span class="subheading">{{ site.description }}</span>
           </div>
         </div>
       </div>
