--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,10 +12,10 @@
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/posts" | relative_url }}">Press-Kit</a>
+          <a class="nav-link" href="{{"/press-kit" | relative_url }}">Press-Kit</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{"/about" | relative_url }}">Contact</a>
+          <a class="nav-link" href="{{"/contact" | relative_url }}">Contact</a>
         </li>
       </ul>
     </div>
