--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,6 +28,7 @@ layout: default
                     <div class="col-md-4 mb-3 mb-md-5"> 
                           <div class="card py-4 h-100"> 
                              <div class="card-body text-center"> 
+                               <i class="fas fa-scroll"></i>
                                 <i class="fas fa-scroll bigicon mb-2"></i> 
                                 <h4 class="text-uppercase medium m-3 text-black">HISTORICAL REALISM</h4> 
                                 <hr class="my-4"> 
