--- a/_layouts/dunno.html
+++ b/_layouts/dunno.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+    <link rel="stylesheet" href="{{"/assets/vendor/font-awesome/css/all.css" | relative_url }}">
+
+</head>
+
+  <body>
+
+    {% include navbar.html %}
+
+    {{ content }}
+
+    {% include footer.html %}
+
+    {% include scripts.html %}
+
+  </body>
+
+</html>
 
