--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="{{"/assets/vendor/bootstrap/css/bootstrap.css" | relative_url }}">
 
-    <link rel="stylesheet" href="{{"/assets/vendor/font-awesome/css/all.css" | relative_url }}">
+  <link rel="stylesheet" href="https://OrsonDeWitt.github.io/assets/vendor/font-awesome/css/all.css">
 
   <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
