--- a/_layouts/dunno.html
+++ b/_layouts/dunno.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="{{"/assets/vendor/bootstrap/css/bootstrap.css" | relative_url }}">
     <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
 
-<link rel="stylesheet" href="https://OrsonDeWitt.github.io/assets/vendor/font-awesome/css/all.css">
-
+<link rel="stylesheet" href="https://OrsonDeWitt.github.io/assets/vendor/font-awesome/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+  
 </head>
 
   <body>
