--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,8 +15,8 @@
 
   <link rel="stylesheet" href="{{"/assets/vendor/bootstrap/css/bootstrap.css" | relative_url }}">
 
-  <link rel="stylesheet" href="https://OrsonDeWitt.github.io/assets/vendor/font-awesome/css/all.css">
-
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+  
   <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
