--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,8 +11,8 @@
           <li class="list-inline-item">
             <a href="https://www.twitter.com/{{ site.twitter_username }}">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -21,8 +21,8 @@
           <li class="list-inline-item">
             <a href="https://www.facebook.com/{{ site.facebook_username }}">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -31,14 +31,14 @@
           <li class="list-inline-item">
             <a href="https://github.com/{{ site.github_username }}">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
           {% endif %}
         </ul>
-        <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
+        <p class="copyright text-muted">Copyright &copy; {{ site.author }}, {{ 'now' | date: "%Y" }}</p>
       </div>
     </div>
   </div>
