--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
             </a>
           </li>
           {% endif %}
-          {% if site.facebook_username %}
+          {% if site.subreddit %}
           <li class="list-inline-item">
             <a href="https://www.reddit.com/r/{{ site.subreddit }}">
               <span class="fa-stack fa-lg">
