--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,11 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto mr-auto">
         <li class="nav-item">
+          {% if page.url == "/about.html" %}
+          <a class="nav-link" href="{{"/index" | relative_url }}">Home</a>
+          {% else %}
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
+          {% endif %}
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/press-kit" | relative_url }}">Press-Kit</a>
