--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
                                 <i class="fas fa-scroll bigicon mb-2"></i> 
                                 <h4 class="text-uppercase medium m-3 text-black">HISTORICAL REALISM</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-black">Live and learn the past! Historia Realis is as accurate as it gets in the absence of time machines.</div>                                 
+                                <div class="small text-black">Explore the authentic life of Ancient Egyptians at various social and religious events; partake in the greatest building project of all times; or do any of the other 50+ activities that allow you to dive into an Ancient Egyptian setting head-first and emerge with a broad spectrum of new questions and answers regarding this incredible civilization!</div>                                 
                             </div>                             
                         </div>                         
                     </div>                     
@@ -52,9 +52,9 @@ layout: default
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-pen bigicon mb-2"></i> 
-                                <h4 class="text-uppercase medium m-3 text-black">EMERGENT STORIES</h4> 
+                                <h4 class="text-uppercase medium m-3 text-black">HIGH REPLAYABILITY</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-black">After playing, you'll always have a unique story to tell on 
+                                <div class="small text-black">Flexible interactive narrative with hundreds of choices;
                                     <a href="https://discord.gg/xtPa3hE" target="_blank">Discord</a>, forums or your local tavern.
                                 </div>                                 
                             </div>                             
