--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
                                 <i class="fas fa-scroll bigicon mb-2"></i> 
                                 <h4 class="text-uppercase medium m-3 text-black">HISTORICAL REALISM</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-black">Explore the authentic life of Ancient Egyptians at various social and religious events; partake in the greatest building project of all times; or do any of the other 50+ activities that allow you to dive into an Ancient Egyptian setting head-first and emerge with a broad spectrum of new questions and answers regarding this incredible civilization!</div>                                 
+                                <div class="small text-black">Dive into an Ancient Egyptian setting head-first and emerge with a broad spectrum of new questions and answers regarding this incredible civilization!</div>                                 
                             </div>                             
                         </div>                         
                     </div>                     
