--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ layout: default
   </header>
 	  
             <div class="container">
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mt-4">Be a Roman</h2>
                         <p class="text-white-50 mb-0">Serve in the legions or study rhetoric. Become a lawyer or a conqueror. Perhaps be assassinated for your ideals, leaving your son to avenge you. It's your story.</p>
