--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: default
                 </div>
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col"> 
-                        <p class="tag">Sandbox</p> 
+                        <p class="tag">Visual Novel</p> 
                     </div>                     
                     <div class="col"> 
                         <p class="tag">Strategy</p> 
@@ -39,7 +39,7 @@ layout: default
                         <p class="tag">RPG</p> 
                     </div>                     
                     <div class="col"> 
-                        <p class="tag">Simulation</p> 
+                        <p class="tag">Political Simulator</p> 
                     </div>                     
                 </div>                 
             </div>
