--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,9 +50,9 @@ layout: default
                           <div class="card py-4 h-100"> 
                              <div class="card-body text-center"> 
                                 <i class="fas fa-scroll bigicon mb-2"></i> 
-                                <h4 class="text-uppercase medium m-3 text-black">HISTORICAL REALISM</h4> 
+                                <h4 class="text-uppercase medium m-3 text-gold">HISTORICAL REALISM</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-black">Dive into an Ancient Egyptian setting head-first and emerge with a broad spectrum of new questions and answers regarding this incredible civilization!</div>                                 
+                                <div class="small text-gold">Dive into an Ancient Egyptian setting head-first and emerge with a broad spectrum of new questions and answers regarding this incredible civilization!</div>                                 
                             </div>                             
                         </div>                         
                     </div>                     
@@ -60,9 +60,9 @@ layout: default
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-cogs bigicon mb-2"></i> 
-                                <h4 class="text-uppercase medium m-3 text-black">Deep Simulation</h4> 
+                                <h4 class="text-uppercase medium m-3 text-gold">Deep Simulation</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-black">Hundreds of AI characters interacting, creating a simulation as deep as the Mediterranean.
+                                <div class="small text-gold">Hundreds of AI characters interacting, creating a simulation as deep as the Mediterranean.
                                     <br> 
                                 </div>                                 
                             </div>                             
@@ -72,9 +72,9 @@ layout: default
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-pen bigicon mb-2"></i> 
-                                <h4 class="text-uppercase medium m-3 text-black">HIGH REPLAYABILITY</h4> 
+                                <h4 class="text-uppercase medium m-3 text-gold">HIGH REPLAYABILITY</h4> 
                                 <hr class="my-4"> 
-                                <div class="small text-black">Flexible interactive narrative with hundreds of choices;
+                                <div class="small text-gold">Flexible interactive narrative with hundreds of choices;
                                     <a href="https://discord.gg/xtPa3hE" target="_blank">Discord</a>, forums or your local tavern.
                                 </div>                                 
                             </div>                             
