--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,7 +51,7 @@ layout: default
                              <div class="card-body text-center"> 
                                 <i class="fas fa-scroll bigicon mb-2"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">HISTORICAL REALISM</h4> 
-                                <hr class="my-4 hrcol" color="#FBC403"> 
+                                <hr class="my-4" color="#FBC403"> 
                                 <div class="small text-gold">Dive into an Ancient Egyptian setting head-first and emerge with a broad spectrum of new questions and answers regarding this incredible civilization!</div>                                 
                             </div>                             
                         </div>                         
@@ -61,7 +61,7 @@ layout: default
                             <div class="card-body text-center"> 
                                 <i class="fas fa-cogs bigicon mb-2"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">Deep Simulation</h4> 
-                                <hr class="my-4 hrcol" color="#FBC403"> 
+                                <hr class="my-4" color="#FBC403"> 
                                 <div class="small text-gold">Hundreds of AI characters interacting, creating a simulation as deep as the Mediterranean.
                                     <br> 
                                 </div>                                 
@@ -73,7 +73,7 @@ layout: default
                             <div class="card-body text-center"> 
                                 <i class="fas fa-pen bigicon mb-2"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">HIGH REPLAYABILITY</h4> 
-                                <hr class="my-4 hrcol" color="#FBC403"> 
+                                <hr class="my-4" color="#FBC403"> 
                                 <div class="small text-gold">Flexible interactive narrative with hundreds of choices;
                                     <a href="https://discord.gg/xtPa3hE" target="_blank">Discord</a>, forums or your local tavern.
                                 </div>                                 
