--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,7 +74,7 @@ layout: default
                                 <i class="fas fa-pen bigicon mb-1"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">HIGH REPLAYABILITY</h4> 
                                 <hr class="my-3" color="#FBC403"> 
-                                <div class="small text-gold">Flexible interactive narrative with hundreds of choices and multiple different outcomes;
+                                <div class="small text-gold">Flexible interactive narrative with hundreds of choices and multiple different outcomes; see how your rulership stacks up against other players and the expectations of Osiris!
                                     <a href="https://discord.gg/xtPa3hE" target="_blank">Discord</a>, forums or your local tavern.
                                 </div>                                 
                             </div>                             
