--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,7 @@ layout: default
                     <div class="col-md-4 mb-3 mb-md-5"> 
                           <div class="card py-4 h-100"> 
                              <div class="card-body text-center"> 
-                                <i class="fas fa-scroll bigicon mb-1"></i> 
+                                <i class="fas fa-scroll bigicon mt-1"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">HISTORICAL REALISM</h4> 
                                 <hr class="my-3" color="#FBC403"> 
                                 <div class="small text-gold">Dive into an Ancient Egyptian setting head-first and emerge with a broad spectrum of new questions and answers regarding this incredible civilization!</div>                                 
@@ -59,7 +59,7 @@ layout: default
                     <div class="col-md-4 mb-3 mb-md-5"> 
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
-                                <i class="fas fa-cogs bigicon mb-1"></i> 
+                                <i class="fas fa-cogs bigicon mt-1"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">Deep Simulation</h4> 
                                 <hr class="my-3" color="#FBC403"> 
                                 <div class="small text-gold">Hundreds of AI characters interacting, creating a simulation as deep as the Mediterranean.
@@ -71,7 +71,7 @@ layout: default
                     <div class="col-md-4 mb-3 mb-md-5"> 
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
-                                <i class="fas fa-pen bigicon mb-1"></i> 
+                                <i class="fas fa-pen bigicon mt-1"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">HIGH REPLAYABILITY</h4> 
                                 <hr class="my-3" color="#FBC403"> 
                                 <div class="small text-gold">Flexible interactive narrative with hundreds of choices and multiple different outcomes; see how your rulership stacks up against other players and the expectations of Osiris!
