--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,8 +24,7 @@ layout: default
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-8 mx-auto">
-                        <h2 class="text-white mt-4">Be a Roman</h2>
-                        <p class="text-white-50 mb-0">Serve in the legions or study rhetoric. Become a lawyer or a conqueror. Perhaps be assassinated for your ideals, leaving your son to avenge you. It's your story.</p>
+                        <p class="text-white-50 mb-0">Egypt is in ruins! Unite Upper and Lower Egypt under your rule through a tangle of well-advised political decisions, all the while encountering unforeseen obstacles and having to balance the kingdom's resources without alienating his people, noblemen or the gods. </p>
                     </div>
                 </div>
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
@@ -75,7 +74,6 @@ layout: default
                                 <h4 class="text-uppercase medium m-3 text-gold">HIGH REPLAYABILITY</h4> 
                                 <hr class="my-3" color="#FBC403"> 
                                 <div class="small text-gold">Flexible interactive narrative with hundreds of choices and multiple different outcomes; see how your rulership stacks up against other players and the expectations of Osiris!
-                                    <a href="https://discord.gg/xtPa3hE" target="_blank">Discord</a>, forums or your local tavern.
                                 </div>                                 
                             </div>                             
                         </div>                         
