--- a/assets/main.css
+++ b/assets/main.css
@@ -104,7 +104,8 @@ img::-moz-selection{
 		color:#fff
 }
 	#mainNav .navbar-nav>li.nav-item>a:focus,#mainNav .navbar-nav>li.nav-item>a:hover{
-		color:rgba(251,196,3,0.8)
+		color:rgba(251,196,3,0.8);
+		transition: color 0.5s;
 }
 }
 @media only screen and (min-width: 992px){
