--- a/assets/main.css
+++ b/assets/main.css
@@ -172,7 +172,7 @@ header.masthead .overlay{
 }
 header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading{
 	padding:100px 0 150px;
-	color:white
+	color:#FBC403;
 }
 @media only screen and (min-width: 768px){
 	header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading{
@@ -199,8 +199,8 @@ header.masthead .page-heading .subheading,header.masthead .site-heading .subhead
 	display:block;
 	margin:10px 0 0;
 	font-family:'Gelasio';
-	color: #FBC403;
-	-webkit-text-fill-color: #FBC403;
+	color: white;
+	-webkit-text-fill-color: white;
 	-webkit-text-stroke-width: 0px;
 	-webkit-text-stroke-color: white;
 }
