--- a/assets/main.css
+++ b/assets/main.css
@@ -126,7 +126,7 @@ img::-moz-selection{
 		-moz-transition:-moz-transform 0.2s;
 		transition:transform 0.2s;
 		border-bottom:1px solid #fff;
-		background-color:black
+		background-color:black;
 }
 	#mainNav.is-fixed .navbar-brand{
 		color:#212529
@@ -135,11 +135,11 @@ img::-moz-selection{
 		color:#0085A1
 }
 	#mainNav.is-fixed .navbar-nav>li.nav-item>a{
-		color:rgba(255,184,68,0.6)
-		transition: color 0.5s;
+		color:white;
 }
 	#mainNav.is-fixed .navbar-nav>li.nav-item>a:focus,#mainNav.is-fixed .navbar-nav>li.nav-item>a:hover{
-		color:white
+		color:rgba(255,184,68,0.6);
+		transition: color 0.5s;
 }
 	#mainNav.is-visible{
 		-webkit-transform:translate3d(0, 100%, 0);
