--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,8 +14,8 @@ layout: default
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
 	   <img src="http://OrsonDeWitt.github.io/img/egypt.jpg">
-            <!-- <h1>EGYPT: Shattered Order</h1> -->
-              <span class="subheading">{{ site.description }}</span>
+            <!-- <h1>EGYPT: Shattered Order</h1>
+              <span class="subheading">{{ site.description }}</span>-->
           </div>
         </div>
       </div>
