--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,7 @@ layout: default
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-	   <img src="http://OrsonDeWitt.github.io/img/egypt.png" width="50%" height="50%">
-            <!-- <h1>EGYPT: Shattered Order</h1>
+ <h1>EGYPT: Shattered Order</h1>
               <span class="subheading">{{ site.description }}</span>-->
           </div>
         </div>
