--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -60,9 +60,9 @@ layout: default
                         <div class="card py-4 h-100"> 
                             <div class="card-body text-center"> 
                                 <i class="fas fa-cogs bigicon pt-3 pb-3"></i> 
-                                <h4 class="text-uppercase medium m-3 text-gold">Deep Simulation</h4> 
+                                <h4 class="text-uppercase medium m-3 text-gold">BORDERLINE ADDICTIVE</h4> 
                                 <hr class="my-3" color="#FBC403"> 
-                                <div class="small text-gold">Hundreds of AI characters interacting, creating a simulation as deep as the Mediterranean.
+                                <div class="small text-gold">Find yourself starting over and over again as you look for new approaches to governance that would not lead you to traps, noblemen plotting against you, or to the crossroads of equally unfavorable alternatives. 
                                     <br> 
                                 </div>                                 
                             </div>                             
