--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -81,11 +81,14 @@ layout: default
                     </div>                     
   
 			
-                 
-                  <div class="mail">
+                             <div class="container">
+                <div class="row text-center">
+                    <div class="col-lg-8 mx-auto">
+                                          <div class="mail">
 	 <center>
 <script type="text/javascript" src="https://cdn.sender.net/webforms/2812/1797a7a8.js?v=8"></script></center></div>
-             </div>
+                    </div>
+                </div>
                   
     <div class="row">
       <div class="col-lg-12 col-md-10 mx-auto">
