--- a/assets/main.css
+++ b/assets/main.css
@@ -5,6 +5,9 @@ body{
 	color:rgba(255,255,255,0.6);
 	font-family:'Source Sans Pro', serif
 }
+bl-bg{
+background: #FBC403;
+}
 p{
 	line-height:1.5;
 	margin:30px 0
