--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -84,9 +84,7 @@ layout: default
                              <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-8 mx-auto">
-                                          <div class="mail">
-	 <center>
-<script type="text/javascript" src="https://cdn.sender.net/webforms/2812/1797a7a8.js?v=8"></script></center></div>
+<script type="text/javascript" src="https://cdn.sender.net/webforms/2812/1797a7a8.js?v=8"></script>
                     </div>
                 </div>
                   
