--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -82,7 +82,7 @@ layout: default
   
 			
                              <div class="container bl-bg">
-                <div class="row text-center">
+                <div class="row text-center bl-bg">
                     <div class="col-lg-8 mx-auto">
 <script type="text/javascript" src="https://cdn.sender.net/webforms/2812/1797a7a8.js?v=8"></script>
                     </div>
