--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -87,7 +87,8 @@ layout: default
 <script type="text/javascript" src="https://cdn.sender.net/webforms/2812/1797a7a8.js?v=8"></script>
                     </div>
                 </div>
-                  
+           
+<div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-10 mx-auto">
 
