--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,8 +24,10 @@ layout: default
 	  
             <div class="container">
                 <div class="row text-center">
+			<p class="text-gold">What would it be like to walk in the sandals of Pharaohs?</p>
                     <div class="col-lg-8 mx-auto">
-                        <p class="text-white-50 mb-0">Egypt is in ruins! Unite Upper and Lower Egypt under your rule through a tangle of well-advised political decisions, all the while encountering unforeseen obstacles and having to balance the kingdom's resources without alienating his people, noblemen or the gods. </p>
+                        <p class="text-white-50 mb-0">You won't know until you unite Egypt — only the rulers of both Upper and Lower Egypt can be called as such, and, as of now, Egypt is shattered! Take the reins of this chariot on its way to the otherworld, restore the order, and build the great pyramid to preserve your legacy! But it's not going to be easy. The priests are breathing down your neck, the enemies are on a war footing, the noblemen are out of line, and, on top of all that, the God's Wife must be chosen swiftly, lest no heir is left to the throne...
+			    </p><p>Can you guide Egyptians through all the hardships to prosperity and power? Will your heart stay pure and uncorrupted so that your soul is granted access to the heavenly realms, to dwell with the gods?</p>
                     </div>
                 </div>
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
