--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,6 +30,13 @@ layout: default
 			    </p><p>Can you guide Egyptians through all the hardships to prosperity and power? Will your heart stay pure and uncorrupted so that your soul is granted access to the heavenly realms, to dwell with the gods?</p>
                     </div>
                 </div>
+		                                 <div class="container">
+                <div class="row text-center">
+                    <div class="col-lg-8 mx-auto">
+                    <script type="text/javascript" src="https://cdn.sender.net/webforms/2812/f1be06ee.js?v=10"></script>                
+                    </div>
+                </div>
+							 
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col"> 
                         <p class="tag">Visual Novel</p> 
@@ -82,13 +89,6 @@ layout: default
                         </div>                         
                     </div>                     
   
-			
-                             <div class="container">
-                <div class="row text-center bl-bg">
-                    <div class="col-lg-8 mx-auto">
-                    <script type="text/javascript" src="https://cdn.sender.net/webforms/2812/f1be06ee.js?v=10"></script>                
-                    </div>
-                </div>
            
 <div class="container">
     <div class="row">
