--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,8 +36,8 @@ layout: default
                     <script type="text/javascript" src="https://cdn.sender.net/webforms/2812/f1be06ee.js?v=10"></script>                
                     </div>
                 </div>
-							  <form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/orsondewitt" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/orsondewitt', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
-         
+
+                    <script type="text/javascript" src="https://cdn.sender.net/webforms/2812/4e55af47.js?v=13"></script>                
 							 
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col"> 
