--- a/assets/main.css
+++ b/assets/main.css
@@ -34,6 +34,9 @@ blockquote{
 	font-weight:700;
 	margin-top:20px
 }
+.text-old{
+	font-color: #d9692a
+}
 .caption{
 	font-size:14px;
 	font-style:italic;
