--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,122 @@ layout: default
         </div>
       </div>
     </div>
+<style type="text/css">
+    .subscription-form input {
+        display: inline-block;
+        padding: 4px;
+        font-size: 13px;
+        line-height: 18px;
+        color: #555555;
+        border: 1px solid #ccc;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        width: 100%;
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        margin-bottom: 10px;
+    }
+    .checkbox_wrapper {
+        display: inline-block;
+        padding: 4px;
+        width: 100%;
+    }
+    .subscription-form input.checkbox_type, .subscription-form .checkbox_label {
+        width: auto;
+        vertical-align: middle;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+    .subscription-form .checkbox_label {
+        display: inline-block;
+        line-height: 18px;
+        margin-left: 4px;
+        font-size: 14px;
+        font-family: helvetica; 
+        color: #d8c580;
+    }
+    .subscription-form input {
+        color: #000000;
+        background-color: #ffffff;
+        border: 0px solid #000000;
+        border-radius:  0px;
+        -webkit-border-radius:  0px;
+        -moz-border-radius:  0px;
+    }
+    .btn-grad {
+        background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+        background: -o-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+        background: -moz-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+        background: linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
+    }
+    .subscription-form-fields {
+        margin-top: 15px;
+    }
+    .subscription-form {
+        width: 600px; 
+        border: 1px solid #000000; 
+        border-radius: 4px; 
+        padding: 20px; 
+        margin: 0 auto; 
+        background-color: #000000;
+    }
+    .subscription-form h4 {
+        font-family: verdana; 
+        color: #FBC403; 
+        font-size: 30px;
+        margin-top: 0px;
+    }
+    .subscription-thank-you {
+        font-family: helvetica; 
+        color: #d8c580; 
+        font-size: 14px;
+    }
+    .subscription-form-content {
+        font-family: helvetica; 
+        color: #d8c580; 
+        font-size: 14px;
+    }
+    .subscription-form button {
+        margin-top: 5px; 
+        border-radius: 7px; 
+        padding: 0px; 
+        display: block; 
+        text-align: center;
+        border: none;
+        width: 100%;
+        color: #FBC403; 
+        background-color: #000000; 
+        font-size: 20px; 
+        font-family: Times New Roman;
+    }
+    .sender-sub-main {
+        display: table;
+        width: 100%;
+        height: 100%;
+    }
+    .sender-sub-inner {
+        display: table-cell;
+        vertical-align: middle;
+    }
+    .sender-link-wrapper {
+        display: block;
+        position: relative;
+        margin-top: 16px;
+    }
+    .sender-link {
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+        font-size: 12px;
+        text-decoration: none !important;
+        color: #555;
+    }
+    .sender-link img {
+        width: 16px;
+        height: 16px;
+        margin-right: 2px;
+        vertical-align: text-bottom;
+    }
+</style>
   </header>
 	  
             <div class="container">
@@ -30,10 +146,33 @@ layout: default
 			    </p><p>Can you guide Egyptians through all the hardships to prosperity and power? Will your heart stay pure and uncorrupted so that your soul is granted access to the heavenly realms, to dwell with the gods?</p>
                     </div>
                 </div>
-		                                 <div class="container">
+	<div class="container">
                 <div class="row text-center">
                     <div class="col-lg-8 mx-auto">
-                    <script type="text/javascript" src="https://cdn.sender.net/webforms/2812/4e55af47.js?v=13"></script>                  
+                    
+<div class="sender-sub-main">
+    <div class="sender-sub-inner">
+        <div class="subscription-form">
+            <h4 class="dont-break-out">Sign up to find out first-hand!</h4>
+               <div class="subscription-form-fields">
+                 <div class="subscription-form-content"></div>
+                    <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
+                            <div class="subscription-form-fields" id="subscription-form-fields">
+                              <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
+                                  </div>
+                                                <button type="submit">SIGN UP</button>
+                    </form>
+                </div>
+                                <span class="sender-link-wrapper">
+                    <a class="sender-link" href="http://sender.net" title="Email marketing services">
+                        <img src="https://app.sender.net/favicon.png">
+                        <span>Sender.net email marketing</span>
+                    </a>
+                </span>
+                                    </div>
+    </div>
+</div>                
+			    </script>                  
                     </div>
                 </div>           
 							 
