--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,10 +31,10 @@ layout: default
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         border-radius: 3px;
-        width: 100%;
+        width: 90%;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
     }
     .checkbox_wrapper {
         display: inline-block;
@@ -108,6 +108,7 @@ layout: default
         background-color: #000000; 
         font-size: 20px; 
         font-family: Times New Roman;
+	content: "\f461";
     }
     .sender-sub-main {
         display: table;
