--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -161,7 +161,7 @@ layout: default
                             <div class="subscription-form-fields" id="subscription-form-fields">
                               <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
                                   </div>
-                                                <button type="submit">SIGN UP</button>
+                                                <button type="submit"><i class="fas fa-scroll"></i> </button>
                     </form>
                 </div>
                                 <span class="sender-link-wrapper">
