--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -157,7 +157,7 @@ layout: default
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
                             <div class="subscription-form-fields" id="subscription-form-fields">
                               <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
-				 <button type="submit"><i class="fas fa-scroll text-gold"></i> </button>
+				 <button type="submit"><i class="fas fa-sign-in-alt text-gold"></i> </button>
                                   </div>
                     </form>
                 </div>
