--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -97,9 +97,7 @@ layout: default
         font-size: 14px;
     }
     .subscription-form button {
-        border-radius: 7px; 
         padding: 0px; 
-        display: block; 
         text-align: center;
         border: none;
         width: 10%;
@@ -157,7 +155,7 @@ layout: default
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
                             <div class="subscription-form-fields" id="subscription-form-fields">
                               <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
-				 <button type="submit"><i class="fas fa-sign-in-alt text-gold"></i> </button>
+				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold"></i> </button>
                                   </div>
                     </form>
                 </div>
