--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -63,12 +63,6 @@ layout: default
         -webkit-border-radius:  0px;
         -moz-border-radius:  0px;
     }
-    .btn-grad {
-        background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
-        background: -o-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
-        background: -moz-linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
-        background: linear-gradient(top,rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
-    }
     .subscription-form-fields {
         margin-top: 15px;
     }
@@ -80,11 +74,9 @@ layout: default
         margin: 0 auto; 
         background-color: #000000;
     }
-    .subscription-form h4 {
-        font-family: verdana; 
+	h8 {
         color: #FBC403; 
         font-size: 30px;
-        margin-top: 0px;
     }
     .subscription-thank-you {
         font-family: helvetica; 
@@ -98,6 +90,7 @@ layout: default
     }
     .subscription-form button {
         padding: 0px; 
+	display: block;
         text-align: center;
         border: none;
         width: 10%;
@@ -145,11 +138,7 @@ layout: default
 	<div class="container">
                 <div class="row text-center">
                     <div class="col-lg-8 mx-auto">
-                    
-<div class="sender-sub-main">
-    <div class="sender-sub-inner">
-        <div class="subscription-form">
-            <h4 class="dont-break-out">Sign up to find out first-hand!</h4>
+            <h8>Sign up to find out first-hand!</h8>
                <div class="subscription-form-fields">
                  <div class="subscription-form-content"></div>
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
