--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,6 +65,7 @@ layout: default
     }
     .subscription-form-fields {
         margin-top: 15px;
+	width: 60%;
     }
     .subscription-form {
         width: 600px; 
@@ -88,7 +89,7 @@ layout: default
         color: #d8c580; 
         font-size: 14px;
     }
-    .subscription-form button {
+    .subscription-form-fields button {
         padding: 0px; 
 	display: block;
         text-align: center;
