--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,7 +65,6 @@ layout: default
     }
     .subscription-form-fields {
         margin-top: 15px;
-	width: 60%;
     }
     .subscription-form {
         width: 600px; 
@@ -89,7 +88,7 @@ layout: default
         color: #d8c580; 
         font-size: 14px;
     }
-    .subscription-form-fields button {
+    .subscription-form button {
         padding: 0px; 
 	display: block;
         text-align: center;
@@ -141,7 +140,6 @@ layout: default
                     <div class="col-lg-8 mx-auto">
             <h8>Sign up to find out first-hand!</h8>
                <div class="subscription-form-fields">
-                 <div class="subscription-form-content"></div>
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
                             <div class="subscription-form-fields" id="subscription-form-fields">
                               <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
