--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,24 +55,13 @@ layout: default
         font-family: helvetica; 
         color: #d8c580;
     }
-    .subscription-form input {
-        color: #000000;
-        background-color: #ffffff;
-        border: 0px solid #000000;
-        border-radius:  0px;
-        -webkit-border-radius:  0px;
-        -moz-border-radius:  0px;
-    }
     .subscription-form-fields {
         margin-top: 15px;
-    }
-    .subscription-form {
-        width: 600px; 
+	width: 600px; 
         border: 1px solid #000000; 
         border-radius: 4px; 
         padding: 20px; 
         margin: 0 auto; 
-        background-color: #000000;
     }
 	h8 {
         color: #FBC403; 
@@ -140,7 +129,7 @@ layout: default
                     <div class="col-lg-8 mx-auto">
             <h8>Sign up to find out first-hand!</h8>
                <div class="subscription-form-fields">
-                    <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
+                    <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
                             <div class="subscription-form-fields" id="subscription-form-fields">
                               <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
 				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold"></i> </button>
