--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: default
       </div>
     </div>
 <style type="text/css">
-    .subscription-form input {
+    .subscription-form-input {
         display: inline-block;
         padding: 4px;
         font-size: 13px;
@@ -57,11 +57,6 @@ layout: default
     }
     .subscription-form-fields {
         margin-top: 15px;
-	width: 600px; 
-        border: 1px solid #000000; 
-        border-radius: 4px; 
-        padding: 20px; 
-        margin: 0 auto; 
     }
 	h8 {
         color: #FBC403; 
@@ -86,15 +81,6 @@ layout: default
         color: #FBC403; 
         background-color: #000000; 
         font-size: 20px; 
-    }
-    .sender-sub-main {
-        display: table;
-        width: 100%;
-        height: 100%;
-    }
-    .sender-sub-inner {
-        display: table-cell;
-        vertical-align: middle;
     }
     .sender-link-wrapper {
         display: block;
@@ -128,9 +114,9 @@ layout: default
                 <div class="row text-center">
                     <div class="col-lg-8 mx-auto">
             <h8>Sign up to find out first-hand!</h8>
-               <div class="subscription-form-fields">
+               <div class="subscription-form-input">
                     <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
-                            <div class="subscription-form-fields" id="subscription-form-fields">
+                            <div class="subscription-form-input" id="subscription-form-fields">
                               <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
 				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold"></i> </button>
                                   </div>
