--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,6 +57,7 @@ layout: default
     }
     .subscription-form-fields {
         margin-top: 15px;
+	width: 100%;
     }
 	h8 {
         color: #FBC403; 
@@ -72,12 +73,10 @@ layout: default
         color: #d8c580; 
         font-size: 14px;
     }
-    .subscription-form button {
+    .subscription-form-fields button {
         padding: 0px; 
-	display: block;
         text-align: center;
         border: none;
-        width: 10%;
         color: #FBC403; 
         background-color: #000000; 
         font-size: 20px; 
@@ -115,8 +114,8 @@ layout: default
                     <div class="col-lg-8 mx-auto">
             <h8>Sign up to find out first-hand!</h8>
                <div class="subscription-form-input">
-                    <form id="sender-subscribe" target="_blank" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
-                            <div class="subscription-form-input" id="subscription-form-fields">
+                    <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/6d35fcb9" method="POST">    
+                            <div class="subscription-form-fields" id="subscription-form-fields">
                               <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
 				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold"></i> </button>
                                   </div>
