--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,17 +58,13 @@ layout: default
     .subscription-form-fields {
         margin-top: 15px;
 	width: 100%;
+	display: inline-block;
     }
 	h8 {
         color: #FBC403; 
         font-size: 30px;
     }
     .subscription-thank-you {
-        font-family: helvetica; 
-        color: #d8c580; 
-        font-size: 14px;
-    }
-    .subscription-form-content {
         font-family: helvetica; 
         color: #d8c580; 
         font-size: 14px;
