--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,6 +83,12 @@ layout: default
         margin-right: 2px;
         vertical-align: text-bottom;
     }
+    .formtable {
+	display: table; width: 100%; height: 100%;
+	}
+    .innerformtable {
+	display: table-cell; vertical-align: middle;    
+	}
 </style>
   </header>
 	  
@@ -95,8 +101,8 @@ layout: default
                     </div>
                 </div>
 	<div class="container">
-                <div class="row text-center">
-                    <div class="col-lg-8 mx-auto">
+                <div class="row text-center formtable">
+                    <div class="col-lg-8 mx-auto innerformtable">
             <h8>Sign up to find out first-hand!</h8>
                <div class="subscription-form-input">
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">    
