--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -101,10 +101,10 @@ layout: default
                     </div>
                 </div>
 	<div class="container">
-                <div class="row text-center formtable">
-                    <div class="col-lg-8 mx-auto innerformtable">
+                <div class="row text-center">
+                    <div class="col-lg-8 mx-auto formtable">
             <h8>Sign up to find out first-hand!</h8>
-               <div class="subscription-form-input">
+               <div class="subscription-form-input innerformtable">
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">    
                             <div class="subscription-form-fields" id="subscription-form-fields">
                               <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
