--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -102,11 +102,11 @@ layout: default
                 </div>
 	<div class="container">
                 <div class="row text-center">
-                    <div class="col-lg-8 mx-auto formtable">
+                    <div class="col-lg-8 mx-auto">
             <h8>Sign up to find out first-hand!</h8>
-               <div class="subscription-form-input innerformtable">
+               <div class="subscription-form-input formtable">
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">    
-                            <div class="subscription-form-fields" id="subscription-form-fields">
+                            <div class="subscription-form-fields innerformtable" id="subscription-form-fields">
                               <input name="email" class="email_type" id="email" data-label="E-mail" placeholder="E-mail" required>
 				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold"></i> </button>
                                   </div>
